# python-builtins

./: .gitignore  README.md  pyproject.toml
src/python_builtins/: __init__.py
tests/: test_abs.py  test_all.py  test_any.py  test_enumerate.py  test_map.py  test_property.py  test_reversed.py  test_sum.py  test_zip.py
