[project]
name = "python-builtins"
version = "0.1.0"
description = "A Python implementation of miscellaneous Python built-in functions"
authors = [
    { name = "Gorka Eraña", email = "eranagorka@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]

[tool.ruff.format]

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.0",
    "pytest>=8.1.1",
    "mypy>=1.9.0",
    "hypothesis>=6.100.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_builtins"]
